# pip-verv

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pip_verv/: __init__.py  analyzer.py  cli.py  collector.py  config.py  formatter.py  inspector.py  metrics.py  models.py  parser.py
tests/: test_analyzer.py  test_cli.py  test_collector.py  test_config.py  test_formatter.py  test_inspector.py  test_metrics.py  test_models.py  test_parser.py
tests/fixtures/: pyproject_full.toml  pyproject_pep735.toml  pyproject_poetry.toml  requirements_basic.txt  requirements_with_includes.txt
